<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StationDetails"
    android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/textColor"
                android:fontFamily="@font/rowdies_bold"
                android:gravity="center_vertical|center_horizontal"
                android:text="ev"
                android:textColor="@color/textColor3"
                android:textSize="120dp" />

            <ImageButton
                android:id="@+id/navBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20sp"
                android:background="@drawable/btnbg2"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                tools:ignore="SpeakableTextPresentCheck" />

        </RelativeLayout>

        <TextView
        android:id="@+id/station_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rowdies_bold"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
            android:textColor="@color/textColor"
        android:text="@string/charging_station_name"
        android:padding="10sp"/>

   <TableLayout
       android:id="@+id/detailTable"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/station_name"
       android:layout_marginTop="20dp">

       <TableRow
           android:padding="10dp">
           <TextView
               android:id="@+id/open_close"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="@color/textColor"
               android:fontFamily="@font/rowdies_regular"
               android:text="@string/status"/>

           <TextView
               android:layout_width="30sp"/>

           <TextView
               android:id="@+id/currentStatus"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="@color/textColor"
               android:fontFamily="@font/rowdies_regular"
               android:text="@string/status2" />
       </TableRow>

       <TableRow
           android:padding="10dp">
           <TextView
               android:id="@+id/chargingPorts"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="@color/textColor"
               android:fontFamily="@font/rowdies_regular"
               android:text="@string/chargingPorts" />

           <TextView
               android:layout_width="30sp"/>

           <TextView
               android:id="@+id/noOfPorts"
               android:layout_width="match_parent"
               android:textColor="@color/textColor"
               android:layout_height="wrap_content"
               android:fontFamily="@font/rowdies_regular"
               android:text="@string/noOfPorts"/>
       </TableRow>

       <TableRow
           android:padding="10dp">
           <TextView
               android:id="@+id/price"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/rowdies_regular"
               android:textColor="@color/textColor"
               android:text="@string/price" />

           <TextView
               android:layout_width="30sp"/>

           <TextView
               android:id="@+id/price1"
               android:layout_width="match_parent"
               android:textColor="@color/textColor"
               android:layout_height="wrap_content"
               android:fontFamily="@font/rowdies_regular"
               android:text="@string/price"/>
       </TableRow>


       <TableRow
           android:padding="10dp">
           <TextView
               android:id="@+id/address"
               android:textColor="@color/textColor"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/rowdies_regular"
               android:text="@string/address" />

           <TextView
               android:layout_width="30sp"/>

           <TextView
               android:id="@+id/stationAddress"
               android:textColor="@color/textColor"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/rowdies_regular"
               android:text="@string/stationaddress"/>
       </TableRow>

       <TableRow
           android:padding="10dp">
           <TextView
               android:id="@+id/location"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/rowdies_regular"
               android:textColor="@color/textColor"
               android:text="@string/get_directions" />

           <TextView
               android:layout_width="30sp"/>

           <TextView
               android:id="@+id/currentLocation1"
               android:textColor="@color/textColor"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/rowdies_regular"
               android:text="@string/ather"
               android:visibility="gone"/>
           <TextView
               android:id="@+id/currentLocation2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/rowdies_regular"
               android:text="@string/arjun"
               android:visibility="gone"/>
           <TextView
               android:id="@+id/currentLocation3"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="@color/textColor"
               android:fontFamily="@font/rowdies_regular"
               android:text="@string/gest"
               android:visibility="gone"/>
           <TextView
               android:id="@+id/currentLocation4"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="@color/textColor"
               android:fontFamily="@font/rowdies_regular"
               android:text="@string/synergy"
               android:visibility="gone"/>
           <TextView
               android:id="@+id/currentLocation5"
               android:layout_width="match_parent"
               android:textColor="@color/textColor"
               android:layout_height="wrap_content"
               android:fontFamily="@font/rowdies_regular"
               android:text="@string/evigo"
               android:visibility="gone"/>
       </TableRow>

       <TableRow
           android:padding="10dp">
           <TextView
               android:id="@+id/contact"
               android:layout_width="match_parent"
               android:textColor="@color/textColor"
               android:layout_height="wrap_content"
               android:fontFamily="@font/rowdies_regular"
               android:text="@string/contact"/>

           <TextView
               android:layout_width="30sp"/>

           <TextView
               android:id="@+id/contactNumber"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="@color/textColor"
               android:fontFamily="@font/rowdies_regular"
               android:text="@string/xxxxx_xxxxx" />
       </TableRow>
   </TableLayout>

    <Button
        android:id="@+id/bookBtn"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/book_slot_now"
        android:textColor="@color/mainBackground"
        android:shadowDy="10"
        android:shadowDx="10"
        android:shadowRadius="2"
        android:shadowColor="@color/mainBackground2"
        android:fontFamily="@font/rowdies_bold"
        android:textSize="20sp"
        android:layout_marginTop="25dp" />

    </LinearLayout>
</ScrollView>