<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".UserProfile"
    android:layout_marginTop="-2dp"
    android:scrollbars="none"
    tools:ignore="ScrollViewCount">


    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/navBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/btnbg2"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_arrow_back" />

            </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rowdies_bold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/profile"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/name" />


        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/email" />

        <TextView
            android:id="@+id/textViewNumber"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/phone" />


        <TextView
            android:id="@+id/accNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rowdies_regular"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/per_detail"
            android:textSize="15sp"
            android:background="@drawable/btnbg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rowdies_regular"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/payment"
            android:textSize="15sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rowdies_regular"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/support"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rowdies_regular"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/settings"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/logout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rowdies_regular"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/logout"
            android:textColor="#ff0000"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>