<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainBackground"
    tools:context=".UserSignup"
    android:layout_marginTop="-2dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/rowdies_bold"
                android:text="@string/signup"
                android:textColor="@color/textColor"
                android:textSize="35sp"
                android:textStyle="bold" />


    <EditText
        android:id="@+id/reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/rowdies_regular"
        android:hint="@string/name"
        android:paddingBottom="20dp"
        android:layout_marginTop="10dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/rowdies_regular"
        android:hint="@string/email"
        android:paddingBottom="20dp"
        android:layout_marginTop="10dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/rowdies_regular"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="10"
            android:layout_marginTop="10dp"
            android:paddingBottom="20dp"
            android:importantForAutofill="no"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/rowdies_regular"
                android:hint="@string/password1"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingBottom="15dp" />


            <ImageButton
                android:id="@+id/showPass"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_toEndOf="@+id/password"
                android:background="@color/TRANSPERENT"
                android:foreground="@drawable/ic_show"
                android:onClick="hidePassword" />

            <ImageButton
                android:id="@+id/hidePass"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_toEndOf="@+id/password"
                android:layout_marginStart="10sp"
                android:visibility="gone"
                android:layout_gravity="center_vertical"
                android:background="@color/TRANSPERENT"
                android:foreground="@drawable/ic_hide"
                android:onClick="hidePassword" />

        </RelativeLayout>

    <Button
        android:id="@+id/send"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textview_border"
        android:fontFamily="@font/rowdies_bold"
        android:padding="5dp"
        android:text="@string/otp"
        android:textColor="@color/textColor"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/rowdies_regular"
        android:hint="@string/otp"
        android:inputType="number"
        android:paddingBottom="20dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/verify_btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/textview_border"
        android:fontFamily="@font/rowdies_bold"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/verify"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/redirect2"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/rowdies_regular"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:maxLength="6"
        android:textColor="@color/textColor" />

    </LinearLayout>
</ScrollView>