<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAccInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/textColor"
                android:fontFamily="@font/rowdies_bold"
                android:gravity="center_vertical|center_horizontal"
                android:text="ev"
                android:textColor="@color/textColor3"
                android:textSize="150dp" />

            <ImageButton
                android:id="@+id/navBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20sp"
                android:background="@drawable/btnbg2"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

        </RelativeLayout>


        <TextView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fontFamily="@font/rowdies_bold"
            android:text="@string/per_detail"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10sp"/>
        <TextView
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="10sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10sp"/>

        <TextView
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10sp"/>

        <TextView
            android:id="@+id/email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10sp"/>

        <TextView
            android:id="@+id/phnno23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10sp"/>

        <TextView
            android:id="@+id/pass123321"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
</ScrollView>